# fugle-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  clean-branch.sh  code-format.sh  main.cpp  requirement.txt
cmake/: compiler_options.cmake  dependencies.cmake
inc/: fugle_client.hpp
modules/: CMakeLists.txt
modules/fugle-api/include/: fugle.hpp  fugle_client_base.hpp  fugle_common_data.hpp  fugle_historical_data.hpp  fugle_snapshot.hpp  fugle_snapshot_data.hpp
modules/fugle-api/src/: fugle_historical.cpp  fugle_intraday.cpp  fugle_snapshot.cpp
modules/rtmonitor/: CMakeLists.txt
modules/sample-pybind11/: CMakeLists.txt  test.py
modules/sample-pybind11/src/: example.cpp
modules/sample_pybind/: CMakeLists.txt
modules/sample_pybind/src/: test_pybind.cpp
modules/testbed/: CMakeLists.txt
modules/testbed/include/: fugle_monitor.hpp  fugle_report.hpp
modules/testbed/src/: fugle_report.cpp  testbed.cpp
project/: CMakeLists.txt  fugle_historical_data.hpp
project/fugle-api/: CMakeLists.txt
project/fugle-api/include/: fugle_api_list.hpp  fugle_client_base.hpp  fugle_common_data.hpp  fugle_historical.hpp  fugle_historical_data.hpp  fugle_intraday.hpp  fugle_intraday_data.hpp  fugle_snapshot.hpp  fugle_snapshot_data.hpp  str_utils.hpp
project/fugle-api/src/: fugle_client_base.cpp  fugle_historical.cpp  fugle_intraday.cpp  fugle_snapshot.cpp
project/rtmonitor/src/: realtime_monitor.cpp
project/stockdb/: CMakeLists.txt
project/testbed/: CMakeLists.txt
project/testbed/include/: fugle_report.hpp  test_db.hpp
project/testbed/src/: fugle_report.cpp  test_db.cpp  testbed.cpp  testbed_fugle_api.cpp
python/common/: api.py
python/quote/: test.py
python/testbed/: test_polygon.py  test_quote.py  test_sqlite.py
python/tools/: trade_value_report.py
python/trade/: test.py  test_trade.py
src/: fugle.hpp  fugle_api_list.hpp  fugle_client.cpp  fugle_client_base.cpp  fugle_client_base.hpp  fugle_common_data.hpp  fugle_historical.cpp  fugle_historical_data.hpp  fugle_intraday.cpp  fugle_intraday.hpp  fugle_intraday_data.hpp  fugle_snapshot.cpp  fugle_snapshot.hpp  fugle_snapshot_data.hpp  main.cpp  str_utils.hpp
stocklab/common/: api.py
stocklab/testbed/: test_finmind.py  test_polygon.py  test_quote.py
stocklab/tools/: monitor.py  trade_value_report.py
stocklab/trade/: test_trade.py
